tests/scripts/errors/errors_2.zs
#option NO_ERROR_HALT on

global script Global {}}}}}{{}}
{
}
